chore(style): Styling updates, fixes and pixel shifting

--- a/src/app/_resources/variables.styl
+++ b/src/app/_resources/variables.styl
@@ -51,5 +51,5 @@ $navbar-default-link-color := $color-black;
 $brand-primary := $color-primary;
 
 
-$font-size-header-regular := 18px;
-$font-size-header-small := 14px;
+$font-size-header-regular := 16px;
+$font-size-header-small := 13px;
