--- a/src/app/footer/footer.component.styl
+++ b/src/app/footer/footer.component.styl
@@ -14,33 +14,30 @@
   color: $color-grey-light
   width 100%
   height 120px
-  display flex
+  position: relative
 
 .menu-block
   background-image url(/assets/images/logo-gray.png)
   background-repeat no-repeat
-  background-position 0 0
+  background-position 0 15px
   get-global-margin-left()
-  margin-top: 15px
-  flex: 7 0 0;
+  height 100%
 
 .menu-content
-  margin-top 40px
+  padding-top 50px
 
 .general-menu
   get-font-size(small)
-  margin-top 5px
-  margin-bottom 10px
   font-family $bariol-regular-font-family
 
 .main-menu
   get-font-size(small)
   font-family $bariol-thin-font-family
+  margin-top 5px
+  line-height: 1.7em
 
 .service-block
-  flex: 1 0 0;
   min-width 90px
-  position relative
 
 .service-buttons
   position absolute
@@ -59,13 +56,15 @@
 .nav li
   display inline
   padding-right 15px
+  +for_breakpoint(small)
+    padding-right 5px
 
 .nav a
   display inline-block
   color #d7d8d9
   text-decoration none
   text-transform uppercase
-  letter-spacing 0.05em
+  letter-spacing 0.07em
 
   &:hover
     color $color-primary
