--- a/src/app/header/header.component.styl
+++ b/src/app/header/header.component.styl
@@ -74,7 +74,7 @@ a
     .breadcrumb
       font-size: $font-size-header-regular
       position relative
-      top -2px
+      top -1px
       
     .breadcrumb-first-level
       display none
@@ -128,6 +128,9 @@ a
     .social-share-icon
       margin 4px
       yellow-box()
+      i
+        position relative
+        top 1px
     
     .menu-icon
       position relative
