--- a/src/app/header/menu/menu.component.styl
+++ b/src/app/header/menu/menu.component.styl
@@ -33,7 +33,7 @@
       padding 13px 15px 12px 15px
       position relative
       text-transform uppercase
-      letter-spacing 0.05em
+      letter-spacing 0.07em
       text-decoration none
       font-weight lighter
       
@@ -174,6 +174,7 @@
             margin-bottom 20px
             a
               text-transform none
+              letter-spacing unset
               line-height 31px
 
             .column-item-icon
