--- a/src/app/header/social-buttons/social-buttons.component.styl
+++ b/src/app/header/social-buttons/social-buttons.component.styl
@@ -29,7 +29,7 @@
   .share-text-box
     border none
     font-size $font-size-header-regular
-    margin 3px 0
+    margin 5px 0
     cursor pointer
     outline none
     height 22px
