--- a/src/app/home/home.component.styl
+++ b/src/app/home/home.component.styl
@@ -11,7 +11,7 @@
   +for_breakpoint(medium)
     height "calc(100% - %s - 30px)" % $header-height
   +for_breakpoint(small)
-    height "calc(100% - %s - 20px)" % $header-height
+    height "calc(100% - %s - 15px)" % $header-height
   background white
 
 .card
@@ -50,7 +50,7 @@
   margin 0px 3px 7px 3px
   color white
   text-transform uppercase
-  letter-spacing 0.05em
+  letter-spacing 0.07em
   get-font-size(medium)
   font-family 'Lato', Arial, sans-serif
 
