--- a/src/app/page/page.component.styl
+++ b/src/app/page/page.component.styl
@@ -58,7 +58,7 @@ body
   get-font-size(medium)
   line-height 1.4
   text-transform uppercase
-  letter-spacing 0.05em
+  letter-spacing 0.07em
   text-shadow rgba(0,0,0,.01) 0 0 1px;
 
 .loader-wrapper
