--- a/src/app/related-items/related-items.component.styl
+++ b/src/app/related-items/related-items.component.styl
@@ -3,13 +3,12 @@
 
 .related-block
   get-global-margin-left()
-  width 100%
 
 .related-heading
   display: none
   color #68b4cd
   text-transform uppercase
-  letter-spacing 0.05em
+  letter-spacing 0.07em
   get-font-size(small)
   padding 5px 0 0 0
 
