--- a/src/app/see-also/see-also.component.styl
+++ b/src/app/see-also/see-also.component.styl
@@ -9,7 +9,7 @@
   display none
   color #68b4cd
   text-transform uppercase
-  letter-spacing 0.05em
+  letter-spacing 0.07em
   get-font-size(small)
   padding 5px 0 0 0
   get-global-margin-left()
@@ -19,7 +19,7 @@
   get-global-margin-left()
   padding 15px 40px 0 0
   +for_breakpoint(small)
-    padding 15px 20px 0 0
+    padding 10px 20px 0 0
   display flex
   flex-wrap wrap
   justify-content space-between
@@ -46,7 +46,7 @@
         get-font-size(medium)
         display block
         text-transform uppercase
-        letter-spacing 0.05em
+        letter-spacing 0.07em
 
       .image
         width 100%
